--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
+    "@types/sendgrid": "^4.3.0",
+    "dotenv": "^16.4.7",
+    "lucide-react": "^0.482.0",
+    "next": "15.2.2",
+    "puppeteer": "^24.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "sendgrid": "^5.2.3"
   },
   "devDependencies": {
     "typescript": "^5",
