--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
     "@types/sendgrid": "^4.3.0",
+    "@vercel/blob": "^0.27.3",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
